[gd_scene load_steps=3 format=4 uid="uid://m0ep8vt6fdbs"]

[ext_resource type="PackedScene" uid="uid://ch1hh04p5qvav" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/Base/PropertiesBase.tscn" id="1"]
[ext_resource type="Script" uid="uid://djp3k20ixbw5j" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/String/PropertiesString.gd" id="2"]

[node name="PropertiesString" instance=ExtResource("1")]
light_mask = 0
script = ExtResource("2")

[node name="LineEdit" type="LineEdit" parent="HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="HBoxContainer/LineEdit" to="." method="ValueChange"]
